Bug 425542 - Dolphin "Free space information" bug
Summary: Dolphin "Free space information" bug
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: bars: status (other bugs)
Version First Reported In: 20.08.0
Platform: Other Other
: NOR minor
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-08-19 11:45 UTC by Jim Jones
Modified: 2020-08-23 21:53 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jim Jones 2020-08-19 11:45:44 UTC
SUMMARY


STEPS TO REPRODUCE
1. Go to Settings -> Configure Dolphin -> Status Bar -> deselect "Show space information"
2. Apply
3. Reselect "Show space information"
4. Apply

OBSERVED RESULT

Free space information doesn't show up

EXPECTED RESULT
Free space information shows up again

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 5.19.4
KDE Frameworks Version: 5.73
Qt Version: 5.15.0

ADDITIONAL INFORMATION

Right clicking in the task bar and de-selecting and selecting "Show Space information" brings back the info

A restart of dophin also brings it back
Comment 1 Julian Steinmann 2020-08-20 12:10:23 UTC
Can confirm this with Dolphin 20.11.70 on KDE Neon Unstable.
Comment 2 Bug Janitor Service 2020-08-23 18:20:48 UTC
A possibly relevant merge request was started @ https://invent.kde.org/system/dolphin/-/merge_requests/46
Comment 3 Elvis Angelaccio 2020-08-23 21:53:40 UTC
Git commit 771b9c8fc25edf9848841d5315ac36d5f09836cd by Elvis Angelaccio, on behalf of Nazar Kalinowski.
Committed on 23/08/2020 at 21:52.
Pushed by elvisangelaccio into branch 'release/20.08'.

Fix 'show space' setting not being re-applied

M  +1    -0    src/statusbar/dolphinstatusbar.cpp

https://invent.kde.org/system/dolphin/commit/771b9c8fc25edf9848841d5315ac36d5f09836cd