Fix 'show space' setting not being re-applied

BUG: 425542